Add Services dropdown nav + update insurance FAQ with superbill info

--- a/index.html
+++ b/index.html
@@ -49,8 +49,16 @@
   <ul class="nav-links" id="nav-links">
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
-    <li><a href="services.html">Services</a></li>
-    <li><a href="therapy-for-men.html">Men's Therapy</a></li>
+    <li class="nav-dropdown">
+      <button class="nav-dropdown-toggle" aria-expanded="false" aria-haspopup="true">Services <svg class="dropdown-arrow" width="10" height="6" viewBox="0 0 10 6" aria-hidden="true"><path d="M1 1l4 4 4-4" stroke="currentColor" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg></button>
+      <ul class="nav-dropdown-menu" role="menu">
+        <li role="none"><a role="menuitem" href="individual-therapy.html">Individual Therapy</a></li>
+        <li role="none"><a role="menuitem" href="therapy-for-men.html">Therapy for Men</a></li>
+        <li role="none"><a role="menuitem" href="young-adult-therapy.html">Young Adult Therapy</a></li>
+        <li role="none"><a role="menuitem" href="clinical-supervision.html">Clinical Supervision</a></li>
+        <li role="none"><a role="menuitem" href="consultation-training.html">Consultation &amp; Training</a></li>
+      </ul>
+    </li>
     <li><a href="contact.html">Contact</a></li>
     <li><a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="nav-cta" target="_blank" rel="noopener">Book a Session</a></li>
   </ul>
