--- a/therapy-for-men.html
+++ b/therapy-for-men.html
@@ -22,7 +22,7 @@
   "mainEntity":[
     {"@type":"Question","name":"Do I need a specific problem to start therapy?","acceptedAnswer":{"@type":"Answer","text":"No. Many men come to therapy without a clear label for what's wrong. You don't need to have a clear goal to begin — just a sense that something could be better."}},
     {"@type":"Question","name":"What is men's therapy like?","acceptedAnswer":{"@type":"Answer","text":"Therapy is practical, thoughtful, and direct. It's not about overanalyzing or being pushed into emotional territory before you're ready. We focus on understanding patterns and making changes that carry over into everyday life."}},
-    {"@type":"Question","name":"Is this practice private pay only?","acceptedAnswer":{"@type":"Answer","text":"Yes. This is a private pay practice. I do not accept insurance. This allows for greater flexibility, privacy, and clinical focus."}}
+    {"@type":"Question","name":"Is this practice private pay only?","acceptedAnswer":{"@type":"Answer","text":"Yes. This is a private pay practice. I do not accept insurance. This allows for greater flexibility, privacy, and clinical focus. I am happy to provide a superbill for clients to submit to their insurance if they wish to utilize any out-of-network benefits they may have."}}
   ]
 }
 </script>
@@ -37,8 +37,16 @@
   <ul class="nav-links" id="nav-links">
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
-    <li><a href="services.html">Services</a></li>
-    <li><a href="therapy-for-men.html">Men's Therapy</a></li>
+    <li class="nav-dropdown">
+      <button class="nav-dropdown-toggle" aria-expanded="false" aria-haspopup="true">Services <svg class="dropdown-arrow" width="10" height="6" viewBox="0 0 10 6" aria-hidden="true"><path d="M1 1l4 4 4-4" stroke="currentColor" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg></button>
+      <ul class="nav-dropdown-menu" role="menu">
+        <li role="none"><a role="menuitem" href="individual-therapy.html">Individual Therapy</a></li>
+        <li role="none"><a role="menuitem" href="therapy-for-men.html">Therapy for Men</a></li>
+        <li role="none"><a role="menuitem" href="young-adult-therapy.html">Young Adult Therapy</a></li>
+        <li role="none"><a role="menuitem" href="clinical-supervision.html">Clinical Supervision</a></li>
+        <li role="none"><a role="menuitem" href="consultation-training.html">Consultation &amp; Training</a></li>
+      </ul>
+    </li>
     <li><a href="contact.html">Contact</a></li>
     <li><a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="nav-cta" target="_blank" rel="noopener">Book a Session</a></li>
   </ul>
@@ -86,7 +94,7 @@
   </div>
   <div class="faq-item">
     <h3>Do you accept insurance?</h3>
-    <div class="faq-answer"><p>No. This is a private pay practice. This allows for greater flexibility, privacy, and a focus on what's best for you clinically — not what an insurance company approves.</p></div>
+    <div class="faq-answer"><p>No. This is a private pay practice. This allows for greater flexibility, privacy, and a focus on what's best for you clinically — not what an insurance company approves. That said, I'm happy to provide a superbill that you can submit to your insurance company if you'd like to use any out-of-network benefits you may have.</p></div>
   </div>
   <div class="faq-item">
     <h3>Do you offer telehealth?</h3>
