Add FAQ page, update nav and footer on all pages, update sitemap

--- a/services.html
+++ b/services.html
@@ -36,6 +36,7 @@
       </ul>
     </li>
     <li><a href="contact.html">Contact</a></li>
+    <li><a href="faq.html">FAQ</a></li>
     <li><a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="nav-cta" target="_blank" rel="noopener">Book a Session</a></li>
   </ul>
 </nav>
@@ -84,7 +85,7 @@
   <h2>What to Expect</h2>
   <p>All therapy services are <strong>private pay</strong> — I do not accept insurance. This allows for greater flexibility, privacy, and a focus on what's best for you clinically rather than what a managed care plan allows.</p>
   <p>Sessions are available <strong>in-person</strong> at my office in Baton Rouge or via <strong>secure telehealth</strong> for clients located anywhere in Louisiana.</p>
-  <p>I use a variety of therapeutic approaches and tailor my work to the individual. There is no one-size-fits-all model here. We start where you are and move at a pace that feels right.</p>
+  <p>I use a variety of therapeutic approaches and tailor my work to the individual. There is no one-size-fits-all model here. We start where you are and move at a pace that feels right. <a href="faq.html">See our FAQ for more details</a>.</p>
   <div style="margin-top:2rem">
     <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="btn btn-primary" target="_blank" rel="noopener">Schedule a Session</a>
     <a href="contact.html" class="btn btn-outline" style="margin-left:.75rem">Get in Touch</a>
@@ -112,6 +113,7 @@
     <a href="tel:2252677431">225.267.7431</a>
     <a href="mailto:BrandonReevesLCSW@gmail.com">BrandonReevesLCSW@gmail.com</a>
     <a href="contact.html">Directions & Map</a>
+    <a href="faq.html">FAQ</a>
     <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" target="_blank" rel="noopener">Book Online</a>
   </div>
 </div>
