--- a/young-adult-therapy.html
+++ b/young-adult-therapy.html
@@ -36,6 +36,7 @@
       </ul>
     </li>
     <li><a href="contact.html">Contact</a></li>
+    <li><a href="faq.html">FAQ</a></li>
     <li><a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="nav-cta" target="_blank" rel="noopener">Book a Session</a></li>
   </ul>
 </nav>
@@ -96,6 +97,7 @@
     <a href="tel:2252677431">225.267.7431</a>
     <a href="mailto:BrandonReevesLCSW@gmail.com">BrandonReevesLCSW@gmail.com</a>
     <a href="contact.html">Directions & Map</a>
+    <a href="faq.html">FAQ</a>
     <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" target="_blank" rel="noopener">Book Online</a>
   </div>
 </div>
