Add What to Expect page, update nav/footer/sitemap/FAQ link

--- a/faq.html
+++ b/faq.html
@@ -48,6 +48,7 @@
   <ul class="nav-links" id="nav-links">
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
+    <li><a href="what-to-expect.html">What to Expect</a></li>
     <li class="nav-dropdown">
       <button class="nav-dropdown-toggle" aria-expanded="false" aria-haspopup="true">Services <svg class="dropdown-arrow" width="10" height="6" viewBox="0 0 10 6" aria-hidden="true"><path d="M1 1l4 4 4-4" stroke="currentColor" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg></button>
       <ul class="nav-dropdown-menu" role="menu">
@@ -77,7 +78,7 @@
 
   <div class="faq-item">
     <h3>What should I expect in a first session?</h3>
-    <div class="faq-answer"><p>The first session is about getting to know each other. I'll ask about what brought you in, what's going on in your life, and what you're hoping to get out of therapy. There's no pressure to share more than you're comfortable with. By the end, we'll have a sense of whether we're a good fit and a general direction for moving forward.</p></div>
+    <div class="faq-answer"><p>The first session is about getting to know each other. I'll ask about what brought you in, what's going on in your life, and what you're hoping to get out of therapy. There's no pressure to share more than you're comfortable with. By the end, we'll have a sense of whether we're a good fit and a general direction for moving forward.</p><p>For a deeper look at how therapy works and how to get the most out of it, see <a href="what-to-expect.html">What to Expect in Therapy</a>.</p></div>
   </div>
 
   <div class="faq-item">
@@ -176,6 +177,7 @@
     <a href="tel:2252677431">225.267.7431</a>
     <a href="mailto:BrandonReevesLCSW@gmail.com">BrandonReevesLCSW@gmail.com</a>
     <a href="contact.html">Directions & Map</a>
+    <a href="what-to-expect.html">What to Expect</a>
     <a href="faq.html">FAQ</a>
     <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" target="_blank" rel="noopener">Book Online</a>
   </div>
