--- a/consultation-training.html
+++ b/consultation-training.html
@@ -25,6 +25,7 @@
   <ul class="nav-links" id="nav-links">
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
+    <li><a href="what-to-expect.html">What to Expect</a></li>
     <li class="nav-dropdown">
       <button class="nav-dropdown-toggle" aria-expanded="false" aria-haspopup="true">Services <svg class="dropdown-arrow" width="10" height="6" viewBox="0 0 10 6" aria-hidden="true"><path d="M1 1l4 4 4-4" stroke="currentColor" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg></button>
       <ul class="nav-dropdown-menu" role="menu">
@@ -96,6 +97,7 @@
     <a href="tel:2252677431">225.267.7431</a>
     <a href="mailto:BrandonReevesLCSW@gmail.com">BrandonReevesLCSW@gmail.com</a>
     <a href="contact.html">Directions & Map</a>
+    <a href="what-to-expect.html">What to Expect</a>
     <a href="faq.html">FAQ</a>
     <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" target="_blank" rel="noopener">Book Online</a>
   </div>
