Add blog section with 4 posts, update nav/footer/sitemap

--- a/faq.html
+++ b/faq.html
@@ -61,6 +61,7 @@
     </li>
     <li><a href="contact.html">Contact</a></li>
     <li><a href="faq.html">FAQ</a></li>
+    <li><a href="blog/">Blog</a></li>
     <li><a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="nav-cta" target="_blank" rel="noopener">Book a Session</a></li>
   </ul>
 </nav>
@@ -179,6 +180,7 @@
     <a href="contact.html">Directions & Map</a>
     <a href="what-to-expect.html">What to Expect</a>
     <a href="faq.html">FAQ</a>
+    <a href="blog/">Blog</a>
     <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" target="_blank" rel="noopener">Book Online</a>
   </div>
 </div>
