--- a/therapy-for-men.html
+++ b/therapy-for-men.html
@@ -50,6 +50,7 @@
     </li>
     <li><a href="contact.html">Contact</a></li>
     <li><a href="faq.html">FAQ</a></li>
+    <li><a href="blog/">Blog</a></li>
     <li><a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="nav-cta" target="_blank" rel="noopener">Book a Session</a></li>
   </ul>
 </nav>
@@ -132,6 +133,7 @@
     <a href="contact.html">Directions & Map</a>
     <a href="what-to-expect.html">What to Expect</a>
     <a href="faq.html">FAQ</a>
+    <a href="blog/">Blog</a>
     <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" target="_blank" rel="noopener">Book Online</a>
   </div>
 </div>
