--- a/contact.html
+++ b/contact.html
@@ -85,6 +85,18 @@
   </div>
 </div>
 </section>
+
+<section class="section bg-light">
+<div class="container">
+  <div class="contact-form-wrap">
+    <h2 style="text-align:center;margin-bottom:1rem">Send Me a Message</h2>
+    <p style="text-align:center;max-width:700px;margin:0 auto 2rem;color:#555">Prefer to reach out online? Fill out the form below and I'll get back to you within 1-2 business days.</p>
+    <div style="max-width:700px;margin:0 auto">
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfZ_Gn8uDhe_vuDrAEhMmDaoIVS6_JjToy26__JDG_kMko5_w/viewform?embedded=true" width="100%" height="1724" frameborder="0" marginheight="0" marginwidth="0" style="border:none">Loading…</iframe>
+    </div>
+  </div>
+</div>
+</section>
 </main>
 
 <footer class="site-footer">
