Add links to private pay blog post throughout site

--- a/individual-therapy.html
+++ b/individual-therapy.html
@@ -76,7 +76,7 @@
   <h2>In-Person &amp; Telehealth</h2>
   <p>While most of my practice involves in-person sessions at my Baton Rouge office, I offer secure telehealth sessions for clients located anywhere in Louisiana. Both formats allow for the same depth and quality of work.</p>
 
-  <blockquote>This is a private pay practice. I do not accept insurance. This allows for greater flexibility, privacy, and clinical focus.</blockquote>
+  <blockquote>This is a private pay practice. I do not accept insurance. This allows for greater flexibility, privacy, and clinical focus. <a href="blog/private-pay-therapy.html">Learn more about why.</a></blockquote>
 
   <div style="margin-top:2rem">
     <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="btn btn-primary" target="_blank" rel="noopener">Schedule a Session</a>
