--- a/therapy-for-men.html
+++ b/therapy-for-men.html
@@ -97,7 +97,7 @@
   </div>
   <div class="faq-item">
     <h3>Do you accept insurance?</h3>
-    <div class="faq-answer"><p>No. This is a private pay practice. This allows for greater flexibility, privacy, and a focus on what's best for you clinically — not what an insurance company approves. That said, I'm happy to provide a superbill that you can submit to your insurance company if you'd like to use any out-of-network benefits you may have.</p></div>
+    <div class="faq-answer"><p>No. This is a private pay practice. This allows for greater flexibility, privacy, and a focus on what's best for you clinically — not what an insurance company approves. That said, I'm happy to provide a superbill that you can submit to your insurance company if you'd like to use any out-of-network benefits you may have. <a href="blog/private-pay-therapy.html">Learn more about what private pay means for you.</a></p></div>
   </div>
   <div class="faq-item">
     <h3>Do you offer telehealth?</h3>
