--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
       </div>
 
       <h3 style="margin-top:2.5rem">Private Pay</h3>
-      <p>This is a private pay practice. I do not accept insurance. This allows for greater flexibility, privacy, and a focus on what is best for you clinically.</p>
+      <p>This is a private pay practice. I do not accept insurance. This allows for greater flexibility, privacy, and a focus on what is best for you clinically. <a href="blog/private-pay-therapy.html">Learn more about why I don't accept insurance.</a></p>
     </div>
     <div class="map-wrap">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3441.5!2d-91.0874!3d30.3876!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8626a5e4e6b5b5b5%3A0x0!2s10935+Perkins+Rd%2C+Baton+Rouge%2C+LA+70810!5e0!3m2!1sen!2sus!4v1700000000000!5m2!1sen!2sus" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Office location — 10935 Perkins Rd, Baton Rouge, LA"></iframe>
