--- a/faq.html
+++ b/faq.html
@@ -106,7 +106,7 @@
 
   <div class="faq-item">
     <h3>Do you accept insurance?</h3>
-    <div class="faq-answer"><p>No. This is a private pay practice. I do not accept insurance, which allows for greater flexibility, privacy, and clinical focus. That said, I'm happy to provide a superbill that you can submit to your insurance company to use any out-of-network benefits you may have.</p></div>
+    <div class="faq-answer"><p>No. This is a private pay practice. I do not accept insurance, which allows for greater flexibility, privacy, and clinical focus. That said, I'm happy to provide a superbill that you can submit to your insurance company to use any out-of-network benefits you may have. <a href="blog/private-pay-therapy.html">Learn more about what private pay means for you.</a></p></div>
   </div>
 
   <div class="faq-item">
