Fix: logo on all pages, larger size (52px), add arch feature section, favicon everywhere

--- a/faq.html
+++ b/faq.html
@@ -15,6 +15,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="css/style.css">
+<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 <script type="application/ld+json">
 {
   "@context":"https://schema.org",
@@ -43,7 +44,7 @@
 
 <header class="site-header">
 <nav class="nav-wrap">
-  <a href="index.html" class="nav-brand">Brandon Reeves, LCSW<span>Therapist · Baton Rouge, LA</span></a>
+  <a href="index.html" class="nav-brand"><img src="images/logo-brandon-reeves-wordmark.svg" alt="Brandon Reeves, LCSW" class="nav-logo"></a>
   <button class="hamburger" aria-label="Menu" aria-expanded="false" aria-controls="nav-links"><span></span><span></span><span></span></button>
   <ul class="nav-links" id="nav-links">
     <li><a href="index.html">Home</a></li>
