--- a/individual-therapy.html
+++ b/individual-therapy.html
@@ -20,7 +20,7 @@
 
 <header class="site-header">
 <nav class="nav-wrap">
-  <a href="index.html" class="nav-brand">Brandon Reeves, LCSW<span>Therapist · Baton Rouge, LA</span></a>
+  <a href="index.html" class="nav-brand"><img src="images/logo-brandon-reeves-wordmark.svg" alt="Brandon Reeves, LCSW" class="nav-logo"></a>
   <button class="hamburger" aria-label="Menu" aria-expanded="false" aria-controls="nav-links"><span></span><span></span><span></span></button>
   <ul class="nav-links" id="nav-links">
     <li><a href="index.html">Home</a></li>
