Add arch logo section to about page

--- a/about.html
+++ b/about.html
@@ -81,7 +81,20 @@
 
 <section class="section section-alt">
 <div class="container page-content">
-  <h2>Experience & Credentials</h2>
+  <section class="section section-alt">
+<div class="container">
+<div class="about-feature">
+<div class="about-feature-logo">
+<img src="images/logo-brandon-reeves-lcsw-arch-large.svg" alt="" class="about-logo-mark">
+</div>
+<div class="about-feature-text">
+<h3>Clear Thinking. Steady Support.</h3>
+<p>That's what you'll find here. Grounded, thoughtful therapy for adults ready to move forward.</p>
+</div>
+</div>
+</div>
+</section>
+<h2>Experience & Credentials</h2>
   <p>I'm a Licensed Clinical Social Worker with over 25 years of experience working with adults and young adults. My work is thoughtful, practical, and depth-oriented — focused on understanding patterns that shape how you think, feel, and relate, while staying grounded in real-world change.</p>
   <p>I use a variety of therapeutic approaches, including EMDR, and tailor therapy to the individual rather than relying on a one-size-fits-all model.</p>
 
