Add Greenpath Wellness cross-links to consultation and about pages

--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
     <li>Board-Approved Clinical Supervisor (BACS)</li>
     <li>Member, Louisiana State Board of Social Work Examiners</li>
     <li>EMDR trained</li>
-    <li>I see clients at <a href="http://brcounselingassociates.com" target="_blank" rel="noopener">Baton Rouge Counseling Associates</a>, located at 10935 Perkins Rd, Baton Rouge, LA</li>
+    <li>I see clients at <a href="http://brcounselingassociates.com" target="_blank" rel="noopener">Baton Rouge Counseling Associates</a>, located at 10935 Perkins Rd, Baton Rouge, LA</li><li>I present continuing education workshops through <a href="https://greenpathwellness.com" target="_blank" rel="noopener">Greenpath Wellness</a>, focusing on telesupervision and professional development for Louisiana social workers</li>
   </ul>
 
   <h2>Areas of Focus</h2>
