--- a/consultation-training.html
+++ b/consultation-training.html
@@ -65,7 +65,7 @@
   </ul>
 
   <h2>Training &amp; Continuing Education</h2>
-  <p>I am available for training engagements and continuing education presentations for organizations, agencies, and professional groups. Topics can be tailored to the needs of your group and may include clinical practice, ethics, supervision, and professional development.</p>
+  <p>I am available for training engagements and continuing education presentations for organizations, agencies, and professional groups. Topics can be tailored to the needs of your group and may include clinical practice, ethics, supervision, and professional development.</p><div style="margin-top:2rem;padding:1.5rem;background:#f8f5f0;border-radius:6px;border-left:3px solid #2d4a3e"><h3 style="margin-top:0">Upcoming Workshops</h3><p style="margin-bottom:0.5rem">I also present workshops through <a href="https://greenpathwellness.com" target="_blank" rel="noopener">Greenpath Wellness</a>, specializing in telesupervision training for Louisiana social workers.</p><p style="margin-bottom:0;font-size:0.95rem"><strong>Current offering:</strong> Telesupervision for Louisiana Social Workers — 1.5 CE hours approved by LABSWE. <a href="https://greenpathwellness.com/telesupervision-workshop.html">View dates and register →</a></p></div>
   <p>If you're interested in scheduling a training or CE event, please <a href="contact.html">reach out</a> to discuss your needs.</p>
 
   <div class="disclaimer">
