Add LocalBusiness schema markup to contact page with opening hours, address, geo coordinates, and payment options

--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,50 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="css/style.css">
 <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "Brandon Reeves, LCSW - Therapy in Baton Rouge",
+  "image": "https://brandonreeveslcsw.com/images/headshot-gray.jpg",
+  "@id": "https://brandonreeveslcsw.com/contact.html",
+  "url": "https://brandonreeveslcsw.com",
+  "telephone": "+1-225-267-7431",
+  "email": "mailto:info@brandonreeveslcsw.com",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "10935 Perkins Rd, Suite C",
+    "addressLocality": "Baton Rouge",
+    "addressRegion": "LA",
+    "postalCode": "70810",
+    "addressCountry": "US"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": "30.3876",
+    "longitude": "-91.0629"
+  },
+  "openingHoursSpecification": [
+    {
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+      "opens": "09:00",
+      "closes": "18:00"
+    }
+  ],
+  "priceRange": "$$",
+  "paymentAccepted": ["Private pay", "Venmo", "Check", "Credit Card"],
+  "currenciesAccepted": "USD",
+  "areaServed": {
+    "@type": "City",
+    "name": "Baton Rouge",
+    "containedIn": {
+      "@type": "State",
+      "name": "Louisiana"
+    }
+  }
+}
+</script>
 </head>
 <body>
 <a href="#main" class="skip-link">Skip to main content</a>
