Add Our Office link to main navigation on all pages

--- a/clinical-supervision.html
+++ b/clinical-supervision.html
@@ -27,6 +27,7 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="what-to-expect.html">What to Expect</a></li>
+        <li><a href="our-office.html">Our Office</a></li>
     <li class="nav-dropdown">
       <button class="nav-dropdown-toggle" aria-expanded="false" aria-haspopup="true">Services <svg class="dropdown-arrow" width="10" height="6" viewBox="0 0 10 6" aria-hidden="true"><path d="M1 1l4 4 4-4" stroke="currentColor" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg></button>
       <ul class="nav-dropdown-menu" role="menu">
