Update Our Office page with waiting room photos

--- a/our-office.html
+++ b/our-office.html
@@ -70,16 +70,24 @@
       <div class="container">
         <div class="office-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; margin-bottom: 3rem;">
           <div class="office-photo">
-            <img src="images/office-therapy-room-1.jpg" alt="Comfortable therapy office with seating and soft lighting at Brandon Reeves, LCSW in Baton Rouge" loading="lazy" style="width: 100%; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
-            <p style="margin-top: 1rem; font-size: var(--font-size-sm); color: var(--color-text-muted);">A calm, welcoming space for our sessions.</p>
+            <img src="images/waiting-room-1.jpg" alt="Comfortable waiting area with chairs and warm lighting at Brandon Reeves, LCSW therapy office in Baton Rouge" loading="lazy" style="width: 100%; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+            <p style="margin-top: 1rem; font-size: var(--font-size-sm); color: var(--color-text-muted);">A quiet, comfortable space to wait before your session.</p>
           </div>
           <div class="office-photo">
-            <img src="images/office-therapy-room-2.jpg" alt="Private therapy room with comfortable seating and natural light at Brandon Reeves, LCSW" loading="lazy" style="width: 100%; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
-            <p style="margin-top: 1rem; font-size: var(--font-size-sm); color: var(--color-text-muted);">Designed for privacy and ease.</p>
+            <img src="images/waiting-room-2.jpg" alt="Welcoming waiting room with seating and coffee station at Brandon Reeves, LCSW therapy office" loading="lazy" style="width: 100%; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+            <p style="margin-top: 1rem; font-size: var(--font-size-sm); color: var(--color-text-muted);">Relax with a coffee or tea while you wait.</p>
           </div>
           <div class="office-photo">
-            <img src="images/office-desk-credentialed.jpg" alt="Brandon Reeves, LCSW therapy office desk and credentials displayed on wall in Baton Rouge" loading="lazy" style="width: 100%; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
-            <p style="margin-top: 1rem; font-size: var(--font-size-sm); color: var(--color-text-muted);">Licensed and board-approved clinical supervisor.</p>
+            <img src="images/office-therapy-room-1.jpg" alt="Private therapy office with comfortable seating and soft lighting at Brandon Reeves, LCSW" loading="lazy" style="width: 100%; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+            <p style="margin-top: 1rem; font-size: var(--font-size-sm); color: var(--color-text-muted);">A calm, welcoming space for therapy sessions.</p>
+          </div>
+          <div class="office-photo">
+            <img src="images/office-therapy-room-2.jpg" alt="Private therapy room with natural light and comfortable seating at Brandon Reeves, LCSW in Baton Rouge" loading="lazy" style="width: 100%; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+            <p style="margin-top: 1rem; font-size: var(--font-size-sm); color: var(--color-text-muted);">Designed for privacy and focused conversation.</p>
+          </div>
+          <div class="office-photo">
+            <img src="images/office-desk-credentialed.jpg" alt="Brandon Reeves, LCSW therapy office desk with professional credentials displayed" loading="lazy" style="width: 100%; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+            <p style="margin-top: 1rem; font-size: var(--font-size-sm); color: var(--color-text-muted);">Licensed Clinical Social Worker and Board-Approved Clinical Supervisor.</p>
           </div>
         </div>
       </div>
