--- a/about.html
+++ b/about.html
@@ -28,6 +28,15 @@
   "address":{"@type":"PostalAddress","streetAddress":"10935 Perkins Rd","addressLocality":"Baton Rouge","addressRegion":"LA"}
 }
 </script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QQPHTFJGD9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-QQPHTFJGD9');
+</script>
 </head>
 <body>
 <a href="#main" class="skip-link">Skip to main content</a>
