--- a/what-to-expect.html
+++ b/what-to-expect.html
@@ -28,6 +28,15 @@
   "mainEntityOfPage":"https://brandonreeveslcsw.com/what-to-expect.html"
 }
 </script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QQPHTFJGD9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-QQPHTFJGD9');
+</script>
 </head>
 <body>
 <a href="#main" class="skip-link">Skip to main content</a>
