Update all CTA buttons: Book a Session → Book Free Consultation, Schedule a Session → Schedule Free Consultation, Book Online → Book Free Consultation

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <li><a href="contact.html">Contact</a></li>
     <li><a href="faq.html">FAQ</a></li>
     <li><a href="blog/">Blog</a></li>
-    <li><a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="nav-cta" target="_blank" rel="noopener">Book a Session</a></li>
+    <li><a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="nav-cta" target="_blank" rel="noopener">Book Free Consultation</a></li>
   </ul>
 </nav>
 </header>
@@ -85,7 +85,7 @@
     <h1 class="tagline">Clear thinking.<br>Steady support.</h1>
     <p class="subtitle">Individual therapy with Brandon Reeves, LCSW — helping adults and young adults in Baton Rouge move forward with clarity and confidence.</p>
     <div class="hero-buttons">
-      <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="btn btn-primary" target="_blank" rel="noopener">Schedule a Session</a>
+      <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="btn btn-primary" target="_blank" rel="noopener">Book Free Consultation</a>
       <a href="services.html" class="btn btn-outline">Explore Services</a>
     </div>
   </div>
@@ -143,7 +143,7 @@
 <section class="cta-banner">
   <h2>Ready to Take the First Step?</h2>
   <p>You don't need to have it all figured out. Schedule a session and we'll start where you are.</p>
-  <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="btn btn-primary" target="_blank" rel="noopener">Book Online</a>
+  <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="btn btn-primary" target="_blank" rel="noopener">Book Free Consultation</a>
 </section>
 </main>
 
@@ -168,7 +168,7 @@
     <a href="what-to-expect.html">What to Expect</a>
     <a href="faq.html">FAQ</a>
     <a href="blog/">Blog</a>
-    <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" target="_blank" rel="noopener">Book Online</a>
+    <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" target="_blank" rel="noopener">Book Free Consultation</a>
   </div>
 </div>
 <div class="footer-bottom">
