--- a/individual-therapy.html
+++ b/individual-therapy.html
@@ -49,7 +49,7 @@
     <li><a href="contact.html">Contact</a></li>
     <li><a href="faq.html">FAQ</a></li>
     <li><a href="blog/">Blog</a></li>
-    <li><a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="nav-cta" target="_blank" rel="noopener">Book a Session</a></li>
+    <li><a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="nav-cta" target="_blank" rel="noopener">Book Free Consultation</a></li>
   </ul>
 </nav>
 </header>
@@ -89,7 +89,7 @@
   <blockquote>This is a private pay practice. I do not accept insurance. This allows for greater flexibility, privacy, and clinical focus. <a href="blog/private-pay-therapy.html">Learn more about why.</a></blockquote>
 
   <div style="margin-top:2rem">
-    <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="btn btn-primary" target="_blank" rel="noopener">Schedule a Session</a>
+    <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="btn btn-primary" target="_blank" rel="noopener">Schedule Free Consultation</a>
     <a href="therapy-for-men.html" class="btn btn-outline" style="margin-left:.75rem">Therapy for Men →</a>
   </div>
 </div>
@@ -117,7 +117,7 @@
     <a href="what-to-expect.html">What to Expect</a>
     <a href="faq.html">FAQ</a>
     <a href="blog/">Blog</a>
-    <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" target="_blank" rel="noopener">Book Online</a>
+    <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="\"btn btn-primary\"" target="\"_blank\"" rel="\"noopener\"">Book Free Consultation</a>
   </div>
 </div>
 <div class="footer-bottom">
