--- a/our-office.html
+++ b/our-office.html
@@ -64,7 +64,7 @@
         <li><a href="contact.html">Contact</a></li>
         <li><a href="faq.html">FAQ</a></li>
         <li><a href="blog/">Blog</a></li>
-        <li><a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="nav-cta" target="_blank" rel="noopener">Book a Session</a></li>
+        <li><a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="nav-cta" target="_blank" rel="noopener">Book Free Consultation</a></li>
       </ul>
     </nav>
   </header>
