--- a/what-to-expect.html
+++ b/what-to-expect.html
@@ -63,7 +63,7 @@
     <li><a href="contact.html">Contact</a></li>
     <li><a href="faq.html">FAQ</a></li>
     <li><a href="blog/">Blog</a></li>
-    <li><a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="nav-cta" target="_blank" rel="noopener">Book a Session</a></li>
+    <li><a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="nav-cta" target="_blank" rel="noopener">Book Free Consultation</a></li>
   </ul>
 </nav>
 </header>
@@ -112,7 +112,7 @@
   <p>Therapy is a partnership. If something doesn't make sense — the process, something I've said, why I'm asking a particular question — ask. There are no dumb questions, and clarity makes the work better for both of us.</p>
 
   <div style="margin-top:2.5rem">
-    <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="btn btn-primary" target="_blank" rel="noopener">Schedule a Session</a>
+    <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="btn btn-primary" target="_blank" rel="noopener">Schedule Free Consultation</a>
     <a href="faq.html" class="btn btn-outline" style="margin-left:.75rem">Read the FAQ</a>
   </div>
 
@@ -143,7 +143,7 @@
     <a href="what-to-expect.html">What to Expect</a>
     <a href="faq.html">FAQ</a>
     <a href="blog/">Blog</a>
-    <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" target="_blank" rel="noopener">Book Online</a>
+    <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="\"btn btn-primary\"" target="\"_blank\"" rel="\"noopener\"">Book Free Consultation</a>
   </div>
 </div>
 <div class="footer-bottom">
