--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
     <li><a href="contact.html">Contact</a></li>
     <li><a href="faq.html">FAQ</a></li>
     <li><a href="blog/">Blog</a></li>
-    <li><a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="nav-cta" target="_blank" rel="noopener">Book a Session</a></li>
+    <li><a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="nav-cta" target="_blank" rel="noopener">Book Free Consultation</a></li>
   </ul>
 </nav>
 </header>
@@ -132,7 +132,7 @@
   <p>Sessions are available in-person at my Baton Rouge office or via secure telehealth for anyone located in Louisiana.</p>
 
   <div style="margin-top:2rem">
-    <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="btn btn-primary" target="_blank" rel="noopener">Schedule a Session</a>
+    <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="btn btn-primary" target="_blank" rel="noopener">Schedule Free Consultation</a>
     <a href="services.html" class="btn btn-outline" style="margin-left:.75rem">View Services</a>
   </div>
 </div>
@@ -160,7 +160,7 @@
     <a href="what-to-expect.html">What to Expect</a>
     <a href="faq.html">FAQ</a>
     <a href="blog/">Blog</a>
-    <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" target="_blank" rel="noopener">Book Online</a>
+    <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="\"btn btn-primary\"" target="\"_blank\"" rel="\"noopener\"">Book Free Consultation</a>
   </div>
 </div>
 <div class="footer-bottom">
