--- a/faq.html
+++ b/faq.html
@@ -73,7 +73,7 @@
     <li><a href="contact.html">Contact</a></li>
     <li><a href="faq.html">FAQ</a></li>
     <li><a href="blog/">Blog</a></li>
-    <li><a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="nav-cta" target="_blank" rel="noopener">Book a Session</a></li>
+    <li><a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="nav-cta" target="_blank" rel="noopener">Book Free Consultation</a></li>
   </ul>
 </nav>
 </header>
@@ -163,7 +163,7 @@
   </div>
 
   <div style="margin-top:2rem">
-    <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="btn btn-primary" target="_blank" rel="noopener">Schedule a Session</a>
+    <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="btn btn-primary" target="_blank" rel="noopener">Schedule Free Consultation</a>
     <a href="contact.html" class="btn btn-outline" style="margin-left:.75rem">Contact Me</a>
   </div>
 </div>
@@ -191,7 +191,7 @@
     <a href="what-to-expect.html">What to Expect</a>
     <a href="faq.html">FAQ</a>
     <a href="blog/">Blog</a>
-    <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" target="_blank" rel="noopener">Book Online</a>
+    <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="\"btn btn-primary\"" target="\"_blank\"" rel="\"noopener\"">Book Free Consultation</a>
   </div>
 </div>
 <div class="footer-bottom">
