--- a/services.html
+++ b/services.html
@@ -50,7 +50,7 @@
     <li><a href="contact.html">Contact</a></li>
     <li><a href="faq.html">FAQ</a></li>
     <li><a href="blog/">Blog</a></li>
-    <li><a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="nav-cta" target="_blank" rel="noopener">Book a Session</a></li>
+    <li><a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="nav-cta" target="_blank" rel="noopener">Book Free Consultation</a></li>
   </ul>
 </nav>
 </header>
@@ -100,7 +100,7 @@
   <p>Sessions are available <strong>in-person</strong> at my office in Baton Rouge or via <strong>secure telehealth</strong> for clients located anywhere in Louisiana.</p>
   <p>I use a variety of therapeutic approaches and tailor my work to the individual. There is no one-size-fits-all model here. We start where you are and move at a pace that feels right. <a href="faq.html">See our FAQ for more details</a>.</p>
   <div style="margin-top:2rem">
-    <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="btn btn-primary" target="_blank" rel="noopener">Schedule a Session</a>
+    <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="btn btn-primary" target="_blank" rel="noopener">Schedule Free Consultation</a>
     <a href="contact.html" class="btn btn-outline" style="margin-left:.75rem">Get in Touch</a>
   </div>
 </div>
@@ -128,7 +128,7 @@
     <a href="what-to-expect.html">What to Expect</a>
     <a href="faq.html">FAQ</a>
     <a href="blog/">Blog</a>
-    <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" target="_blank" rel="noopener">Book Online</a>
+    <a href="https://brandonreeveslcsw.janeapp.com/#staff_member/1" class="\"btn btn-primary\"" target="\"_blank\"" rel="\"noopener\"">Book Free Consultation</a>
   </div>
 </div>
 <div class="footer-bottom">
