Clarify free phone consultation process

--- a/individual-therapy.html
+++ b/individual-therapy.html
@@ -63,6 +63,9 @@
 <section class="page-content section">
 <div class="container">
   <p>I offer individual therapy for adults and young adults who are looking for thoughtful, grounded support during times of stress, transition, or uncertainty. My work is collaborative, paced, and focused on meaningful change — without pressure to move faster than feels right.</p>
+<h2>How to Get Started</h2>
+<p>Before we begin regular sessions, I offer a brief, complimentary initial consultation — typically 15 to 20 minutes. This is a chance for us to meet, discuss what's bringing you to therapy, and determine whether we're a good fit. There's no obligation to continue, and if it feels like I may not be the right therapist for you, I'm happy to suggest other options.</p>
+<p>If we decide to work together, then we'll schedule your first regular session. This process helps us both make sure I'm the right therapist for what you need.</p>
 
   <h2>What Brings People to Therapy</h2>
   <p>People come to therapy because something isn't working the way it should. Sometimes there's a clear issue — anxiety that won't let up, a loss you can't move past, a relationship pattern that keeps repeating. Other times, there's no single problem — just a sense that something needs to change.</p>
