--- a/what-to-expect.html
+++ b/what-to-expect.html
@@ -77,7 +77,10 @@
 <section class="section">
 <div class="container page-content">
 
-  <h2>How Therapy Works</h2>
+  <h2>Getting Started: The Free Consultation</h2>
+ <p>All new clients begin with a free 15-minute phone consultation. This is a brief conversation where we'll talk about what brings you to therapy, what you're hoping to get out of it, and whether we're a good fit. There's no cost, no obligation, and no pressure to commit. If it feels like I may not be the right therapist for you, I'm happy to suggest other options.</p>
+ <p><strong>Regular sessions are 50 minutes.</strong> If we decide to work together after the consultation, we'll schedule your first full session. Most clients start with weekly appointments, though we can adjust based on your needs.</p>
+ <h2>How Therapy Works</h2>
   <p>Most people assume therapy is about getting advice. It's not. If advice were enough, a good conversation with a friend would solve everything. Therapy is about understanding yourself — your patterns, your reactions, the things that keep showing up in your life — so you can start making different choices.</p>
   <p>The main tool is conversation. That sounds simple, maybe even underwhelming. But there's a difference between talking and being heard by someone trained to listen for what's underneath the words. In therapy, patterns become visible that you can't see on your own. Options emerge that didn't seem available before.</p>
   <p>It's not the same as talking to a friend. A friend has opinions, history with you, their own stake in things. A therapist brings perspective without an agenda.</p>
